# aide

./: Cargo.toml  release.toml
aide/: Cargo.toml
aide-macros/: Cargo.toml  release.toml
aide-macros/src/: lib.rs
aide/src/: gen.rs  generator.rs  lib.rs  operation.rs  transform.rs  util.rs
aide/src/axum/: inputs.rs  mod.rs  outputs.rs  routing.rs
aide/src/helpers/: no_api.rs  use_api.rs  with_api.rs
aide/src/impls/: bytes.rs  mod.rs
axum-jsonschema/: Cargo.toml  release.toml
axum-jsonschema/src/: lib.rs
crates/aide/: Cargo.toml
crates/aide/src/: gen.rs
examples/example-axum/: Cargo.toml
examples/example-axum/src/: docs.rs  main.rs
