[package]
name = "aide"
version = "0.13.4"
authors = ["tamasfe"]
edition = "2021"
keywords = ["generate", "api", "openapi", "documentation", "specification"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicrosengren/aide"
description = "A code-first API documentation library"
readme = "README.md"
publish = false

[dependencies]
indexmap = { version = "2.1", features = ["serde"] }
schemars = { version = "0.8.16", features = ["impl_json_schema", "indexmap2"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0"
aide-macros = { version = "0.7.2", path = "../aide-macros", optional = true }

bytes = { version = "1", optional = true }
http = { version = "1.0.0", optional = true }

axum = { version = "0.7.1", optional = true }
axum-extra = { version = "0.9.0", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }


[features]
macros = ["dep:aide-macros"]
redoc = []
scalar = []
skip_serializing_defaults = []

axum = [ "dep:axum", "bytes", "http", "dep:tower-layer", "dep:tower-service" ]
axum-headers = ["axum-extra/typed-header"]
axum-ws = ["axum/ws"]
axum-multipart = ["axum/multipart"]
axum-extra = ["axum", "dep:axum-extra"]
axum-extra-cookie = ["axum", "axum-extra", "axum-extra/cookie"]
axum-extra-cookie-private = ["axum", "axum-extra", "axum-extra/cookie-private"]
axum-extra-form = ["axum", "axum-extra", "axum-extra/form"]
axum-extra-query = ["axum", "axum-extra", "axum-extra/query"]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
